<resources>
    <string name="app_name">Layouts</string>
    <string name="enter_username">enter username</string>
    <string name="enter_password">enter password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="phone_n">enter a phone number</string>
    <string name="example">+353894780643</string>
    <string name="dial">Dial</string>
</resources>
