<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".RelativeActivity">
    <TextView
        android:id="@+id/username"
        android:gravity="center"
        android:padding="20dp"
        android:layout_width="150dp"

        android:layout_height="60dp"
        android:text="@string/username" />
    <EditText
        android:id="@+id/inputUsername"
        android:hint="@string/enter_username"
        android:layout_width="wrap_content"
        android:inputType="text"
        android:layout_height="60dp"
        android:layout_toEndOf="@id/username"
         />
    <TextView
        android:id="@+id/password"
        android:layout_width="150dp"
        android:layout_below="@id/username"
        android:padding="20dp"
        android:gravity="center"

        android:layout_height="wrap_content"
        android:text="@string/password" />
    <EditText
        android:id="@+id/inputPassword"
        android:layout_toEndOf="@id/password"
        android:hint="@string/enter_password"
        android:layout_width="wrap_content"
        android:layout_below="@id/inputUsername"
        android:inputType="textPassword"
        android:layout_height="60dp"
         />
    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/inputPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"/>
</RelativeLayout>