<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/username"
        android:padding="20dp"
        android:layout_width="150dp"
        android:textAlignment="textEnd"
        android:layout_height="wrap_content"
        android:text="@string/username" />
    <EditText
        android:id="@+id/inputUsername"
        android:hint="@string/enter_username"
        android:layout_width="wrap_content"
        android:inputType="text"
        android:layout_height="wrap_content" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/password"
            android:layout_width="150dp"
            android:textAlignment="textEnd"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:text="@string/password" />
        <EditText
            android:id="@+id/inputPassword"
            android:hint="@string/enter_password"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>