<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".DialActivity">
    <TextView
        android:id="@+id/username"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textColor="#000000"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:text="@string/phone_n" />
    <EditText
        android:id="@+id/inputUsername"
        android:hint="@string/example"
        android:layout_width="wrap_content"
        android:inputType="phone"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_below="@id/username"
        android:layout_height="60dp" />

    <Button
        android:id="@+id/b1"
        android:layout_below="@id/inputUsername"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/dial"
        android:onClick="Dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>